--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Danger action for GitHub actions",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,12 @@
   },
   "devDependencies": {
     "@types/node": "^12.7.5",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2",
     "typescript": "^3.6.3"
   }
 }
