--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,17 +26,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-      if: github.event == 'pull_request'
+      if: github.event_name  == 'pull_request'
     - uses: actions/setup-node@v1
-      if: github.event == 'pull_request'
+      if: github.event_name  == 'pull_request'
       with:
         node-version: 12.x
     - uses: actions/setup-ruby@v1
-      if: github.event == 'pull_request'
+      if: github.event_name  == 'pull_request'
       with:
         ruby-version: '2.6'
     - uses: MeilCli/danger-action@master
-      if: github.event == 'pull_request'
+      if: github.event_name  == 'pull_request'
       with:
         plugins_file: 'Gemfile'
         danger_file: 'Dangerfile'
