--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,3 +41,5 @@ jobs:
         plugins_file: 'Gemfile'
         danger_file: 'Dangerfile'
         danger_id: 'danger-pr'
+      env:
+        DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
