--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,8 @@
 name: 'Danger action'
 description: 'run danger'
 author: 'MeilCli'
+icon: zap
+color: red
 inputs:
   danger_version:
     description: 'danger version'
