--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -2,8 +2,8 @@ name: Check Package
 
 on: 
   schedule:
-    - cron: '0 8 * * 5'
-
+    #- cron: '0 8 * * 5'
+    - cron: '52 * * * *'
 jobs:
   npm:
     runs-on: ubuntu-latest
