--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,14 @@
     "tabWidth": 4,
     "printWidth": 120,
     "semi": true,
-    "singleQuote": false
+    "singleQuote": false,
+    "overrides": [
+        {
+            "files": ["*.yml"],
+            "options": {
+                "tabWidth": 2,
+                "singleQuote": true
+            }
+        }
+    ]
 }
