--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,7 @@
         "plugin:prettier/recommended",
         "prettier/@typescript-eslint"
     ],
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    "plugins": ["@typescript-eslint"],
     "env": {
         "node": true,
         "es6": true
