--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,16 +3,17 @@ name: CI
 on: 
   push:
     branches:    
-    - master
+      - master
   pull_request:
     branches:
-    - master
+      - update
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
         node-version: 12.x
@@ -26,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name  == 'pull_request'
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
         node-version: 12.x
@@ -34,11 +35,18 @@ jobs:
       with:
         ruby-version: '2.6'
     - name: npm install
-      run: |
-        npm install
+      run: npm install
       env:
         CI: true
-    - uses: MeilCli/danger-action@master
+    - uses: actions/cache@v1
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
+    - name: Bundle config
+      run: bundle config path vendor/bundle
+    - uses: MeilCli/danger-action@update
       with:
         plugins_file: 'Gemfile'
         danger_file: 'Dangerfile'
