--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,21 @@ jobs:
         npm run build
       env:
         CI: true
+    - uses: actions/cache@v1
+      with:
+        path: .github/vendor/bundle
+        key: ${{ runner.os }}-build-gems-${{ hashFiles('.github/Gemfile') }}
+        restore-keys: |
+          ${{ runner.os }}-build-gems-
+    - name: Bundle config
+      run: bundle config path .github/vendor/bundle
+    - uses: MeilCli/danger-action@master
+      with:
+        plugins_file: '.github/Gemfile'
+        danger_file: '.github/Dangerfile'
+        danger_id: 'danger-build'
+      env:
+        DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   danger:
     runs-on: ubuntu-latest
     if: github.event_name  == 'pull_request'
@@ -40,9 +55,9 @@ jobs:
     - uses: actions/cache@v1
       with:
         path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('Gemfile') }}
+        key: ${{ runner.os }}-danger-gems-${{ hashFiles('Gemfile') }}
         restore-keys: |
-          ${{ runner.os }}-gems-
+          ${{ runner.os }}-danger-gems-
     - name: Bundle config
       run: bundle config path vendor/bundle
     - uses: MeilCli/danger-action@master
