--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Bundle config
       run: bundle config path vendor/bundle
     - uses: MeilCli/danger-action@update
+      continue-on-error: true
       with:
         plugins_file: '.github/Gemfile'
         install_path: '../vendor/bundle'
@@ -41,6 +42,7 @@ jobs:
         danger_id: 'danger-build'
       env:
         DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - run: bundle config
   danger:
     runs-on: ubuntu-latest
     if: github.event_name  == 'pull_request'
