--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/cache@v1
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-build-gems-${{ hashFiles('.github/Gemfile') }}
+          key: ${{ runner.os }}-build-gems-${{ hashFiles('Gemfile2') }}
           restore-keys: |
             ${{ runner.os }}-build-gems-
       - uses: MeilCli/danger-action@update
