--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: CI
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -19,12 +20,20 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: '2.6'
-      - name: npm install and build
-        run: |
-          npm install
-          npm run build
-        env:
-          CI: true
+      - run: npm install
+      - run: npm run build
+      - run: npm run pack
+        if: github.event_name != 'pull_request'
+      - name: Create Pull Request
+        if: github.event_name != 'pull_request'
+        uses: peter-evans/create-pull-request@v2
+        with:
+          commit-message: 'update actions'
+          title: 'update actions'
+          labels: 'Action'
+          assignees: 'MeilCli'
+          reviewers: 'MeilCli'
+          branch: 'update/action'
       - uses: actions/cache@v1
         with:
           path: vendor/bundle
