--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,11 +17,15 @@
         "project": "./tsconfig.json"
     },
     "rules": {
+        "no-empty-function": "off",
+        "@typescript-eslint/no-empty-function": ["off"],
+        "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/explicit-function-return-type": "off",
         "prettier/prettier": [
             "error",
             {
-                "tabWidth": 4
+                "tabWidth": 4,
+                "endOfLine": "auto"
             }
         ]
     }
