--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,9 @@ inputs:
   danger_id:
     description: 'danger id, set identifier string'
     required: true
+  fail_on_stderr_when_bundler:
+    description: 'action fail when bunder output stderr'
+    default: 'false'
   fail_on_stderr_when_danger:
     description: 'action fail when danger output stderr'
     default: 'false'
