change to use MeilCli-bot

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: peter-evans/create-pull-request@v3
         with:
+          token: ${{ secrets.MEILCLI_BOT }}
           commit-message: 'update actions'
           title: 'update actions'
           labels: 'Action'
