--- a/.github/workflows/ci-base-build.yml
+++ b/.github/workflows/ci-base-build.yml
@@ -1,13 +1,5 @@
-name: CI
-
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  workflow_call:
 
 jobs:
   build:
@@ -65,47 +57,3 @@ jobs:
           danger_id: 'danger-build'
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  danger:
-    runs-on: ubuntu-latest
-    if: github.event_name  == 'pull_request'
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '2.6'
-      - name: npm install
-        run: npm install
-        env:
-          CI: true
-      - uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-danger-gems-${{ hashFiles('Gemfile') }}
-          restore-keys: |
-            ${{ runner.os }}-danger-gems-
-      - name: Bundle config
-        run: bundle config path vendor/bundle
-      - uses: ./
-        with:
-          plugins_file: 'Gemfile'
-          danger_file: 'Dangerfile'
-          danger_id: 'danger-pr'
-        env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  approve:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.event_name == 'pull_request' && github.actor == 'dependabot[bot]'
-    steps:
-      - id: metadata
-        uses: dependabot/fetch-metadata@v1.1.1
-        with:
-          github-token: '${{ secrets.GITHUB_TOKEN }}'
-      - if: steps.metadata.outputs.update-type == 'version-update:semver-patch' || steps.metadata.outputs.update-type == 'version-update:semver-minor'
-        run: gh pr review --approve "$PR_URL"
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GITHUB_TOKEN: ${{ secrets.MEILCLI_BOT }}
