--- a/.github/workflows/ci-base-build.yml
+++ b/.github/workflows/ci-base-build.yml
@@ -21,6 +21,7 @@ jobs:
             ${{ runner.OS }}-build-
       - run: npm install
       - run: npm run build
+      - run: npm run test
       - run: npm run lint:report
         continue-on-error: true
       - uses: actions/upload-artifact@v3
