--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "tsc",
         "pack": "ncc build",
+        "test": "jest",
         "lint": "eslint src/**/*.ts",
         "lint:report": "eslint --output-file eslint_report.json --format json src/**/*.ts"
     },
@@ -18,6 +19,7 @@
         "@actions/io": "^1.1.2"
     },
     "devDependencies": {
+        "@types/jest": "^29.2.0",
         "@types/node": "^18.11.2",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "@typescript-eslint/parser": "^5.40.1",
@@ -25,7 +27,26 @@
         "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "jest": "^29.2.1",
+        "jest-circus": "^29.2.1",
         "prettier": "^2.7.1",
+        "ts-jest": "^29.0.3",
         "typescript": "^4.8.4"
+    },
+    "jest": {
+        "clearMocks": true,
+        "moduleFileExtensions": [
+            "js",
+            "ts"
+        ],
+        "testEnvironment": "node",
+        "testMatch": [
+            "**/*.test.ts"
+        ],
+        "testRunner": "jest-circus/runner",
+        "transform": {
+            "^.+\\.ts$": "ts-jest"
+        },
+        "verbose": true
     }
 }
