--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,12 @@ inputs:
   danger_version:
     description: 'danger version'
     default: '>= 6.0.0'
+  danger_version_file:
+    description: 'danger version file'
+    default: '.tool-versions'
+  danger_version_file_format:
+    description: 'danger version file format'
+    default: 'asdf'
   plugins_file:
     description: 'gemfile for danger plugin. if set plugins_file, action do not exec gem install'
   install_path:
